--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="header__logo">Данин первый сайтик</div>
 
 			<nav>
-				<a class="nav__link" href="https://vk.com/horadrin" target="_blank">Арсек</a>
+				<a class="nav__link" href="https://vk.com/horadrin" target="_blank">Арсек (великий киборг у4еный)</a>
 				<a class="nav__link" href="https://vk.com/a_k_i_m0" target="_blank">Артурек</a>
 				<a class="nav__link" href="https://vk.com/jlomkadiray" target="_blank">Борисек</a>
 				<a class="nav__link" href="https://vk.com/tserensohorov" target="_blank">Церенек</a>
